--- a/src/form.css
+++ b/src/form.css
@@ -57,9 +57,23 @@ img {
   justify-content: center; /*Контент выровнить по центру по оси Y*/
 
   background: url(images/bg-sign-in-basic.jpeg) center no-repeat;
+  backdrop-filter: brightness(50%);
   background-size: cover; /*Для 
     пропорционального распределения размера изображения*/
   height: 100vh;
+}
+
+.block__signIn::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .container {
@@ -171,6 +185,13 @@ img {
 }
 .form__input:focus {
   border: 2px solid #2a83eb;
+}
+
+.ErrorInLP {
+  border: 2px solid rgba(209, 31, 31, 0.877);
+}
+.ErrorInLP:focus {
+  border: 2px solid rgba(209, 31, 31, 0.877);
 }
 
 .form__label {
